[tool.poetry]
name = "pti-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pti_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
