[tool.poetry]
name = "pti-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pti_tools"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
docopt = "^0.6.2"
pydantic = "^2.7.1"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
